Add isTimeinRange functionality
