# src/routes/locaisSegurosRoutes.js
@@ -1,5 +1,6 @@
 import express from 'express'
 import prisma from '../prismaClient.js'
+import isTimeInRange from '../utilities/isTimeinRange.js'
 
 const router = express.Router()
 
@@ -31,6 +32,28 @@ router.post('/', async (req, res) => {
         })
 
         res.status(201).json({ message: "Local seguro criado com sucesso!"})
+    } catch (error) {
+        res.status(500).json({ error: error.message })
+    }
+})
+
+router.post('/aberto', async (req, res) => {
+    try {
+        const { id, time, day } = req.body
+
+        const local = await prisma.localSeguro.findUnique({
+            where: { id },
+        })
+
+        if (!local) {
+            return res.status(404).json({ error: 'Local seguro não encontrado' })
+        }
+
+        if (local[day].length === 0) {
+            return res.status(400).json({ error: 'Horário de funcionamento não disponível para o dia informado' })
+        }
+
+        res.status(200).json({ aberto: isTimeInRange(time, local[day]) })
     } catch (error) {
         res.status(500).json({ error: error.message })
     }
